Display "Changes" if there is a changelog, correct overflow in checksum

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,10 @@ $navbar-item-img-max-height: 6rem;
   height: 100%;
 }
 
+.is-scrollable-x {
+  overflow-x: auto;
+}
+
 //Navbar
 .app-header {
   // background-color: #002e4b;
